@@ -1,5 +1,7 @@
 0.31
  - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun.
+ - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human.
  - Add SEE ALSO link to Wikibase::Datatype::Snak.
  - Fix output of example in Wikibase::Datatype::Languages doc.
